--- a/HTML/homework3/index.html
+++ b/HTML/homework3/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
- <html lang="en">
- <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
-    <title>Shop</title>
+        <title>Shop</title>
     <link rel="stylesheet" href="css/style.css">
- </head>
- <body>
+</head>
+<body>
     <div id="wrapper">
         <header>
             <div class="logo">Fitness</div>
@@ -28,8 +28,14 @@
                 <li><a href="">Автотовары</a></li>
             </ul>
             <section class="content_right">
-            <img src="img/bike.jpg">
-            <div class="text_box">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
+                <img src="img/bike.jpg">
+            <div class="text_box">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні.
+                Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв
+                шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила
+                п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною.
+                Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset,
+                які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування
+                на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
             </div>
             </section>
         </div>
@@ -43,5 +49,5 @@
             </ul>
         </footer>
     </div>
- </body>
- </html>
+</body>
+</html>
